Added procapture to build.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "meta-intel"]
 	path = meta-intel
 	url = https://git.yoctoproject.org/git/meta-intel
+[submodule "meta-magewell"]
+	path = meta-magewell
+	url = https://github.com/pauldotknopf/meta-magewell.git
